# shark-ai

./: .pre-commit-config.yaml  README.md  data.json  inspect_irpa.py  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements-dev.txt  requirements-iree-pinned.txt  requirements-iree-unpinned.txt  requirements.txt  run_shark_ai.sh
.github/: CODEOWNERS
fusilli-plugin/: CMakeLists.txt  IreePlugin.cpp  README.md
fusilli-plugin/build_tools/: install_deps_from_source.sh
fusilli-plugin/build_tools/cmake/: FusilliPluginDependencyUtils.cmake
fusilli-plugin/docs/: TheRockRFC.md
fusilli-plugin/include/: graph_import.h  hipdnn_engine_plugin_handle.h  utils.h
fusilli-plugin/integration_tests/: CMakeLists.txt  ConvFpropIntegrationTest.cpp  main.cpp
fusilli-plugin/src/: fusilli_plugin.cpp
fusilli-plugin/test/: test_fusilli_plugin_api.cpp  test_graph_import.cpp
fusilli-plugin/test/integration/: CMakeLists.txt  test_convfprop.cpp
sharkfuser/: .clang-tidy  CMakeLists.txt  CTestCustom.cmake.in  README.md
sharkfuser/benchmarks/: CMakeLists.txt  driver.cpp  run_benchmark.py
sharkfuser/build_tools/cmake/: CTestCustom.cmake.in  CTestMacros.cmake  FusilliBuildMacros.cmake  FusilliTestUtils.cmake  SharkfuserUtils.cmake
sharkfuser/build_tools/docker/: exec_docker_ci.sh
sharkfuser/docs/: fusilli.excalidraw
sharkfuser/include/: fusili.h  fusilli.h
sharkfuser/include/fusili/: asm_emitter.h  attributes.h  context.h  external_tools.h  graph.h  logging.h  types.h
sharkfuser/include/fusili/attributes/: attributes.h  conv_attributes.h  tensor_attributes.h
sharkfuser/include/fusili/node/: conv_node.h  node.h
sharkfuser/include/fusilli/: asm_emitter.h  backend.h  extras.h  graph.h  logging.h  utils.h
sharkfuser/include/fusilli/attributes/: attributes.h  conv_attributes.h  pointwise_attributes.h  tensor_attributes.h  torch_types.h  types.h
sharkfuser/include/fusilli/backend/: backend.h  buffer.h  handle.h  runtime.h
sharkfuser/include/fusilli/graph/: context.h  graph.h
sharkfuser/include/fusilli/node/: conv_node.h  matmul_node.h  node.h  pointwise_node.h
sharkfuser/include/fusilli/support/: asm_emitter.h  logging.h
sharkfuser/samples/: CMakeLists.txt
sharkfuser/samples/convolution/: conv_dgrad_nhwc_krsc.cpp  conv_dgrad_nhwc_krsc_grouped.cpp  conv_fprop.cpp  conv_fprop_grouped_nchw_kcrs.cpp  conv_fprop_grouped_with_relu_and_bias.cpp  conv_fprop_nchw_kcrs.cpp  conv_fprop_nhwc_krsc.cpp  conv_fprop_nhwc_krsc_with_pad.cpp  conv_fprop_with_bias.cpp  conv_fprop_with_relu.cpp  conv_fprop_with_relu_and_bias.cpp  conv_sample_utils.h  conv_wgrad_nhwc_krsc.cpp  conv_wgrad_nhwc_krsc_grouped.cpp  conv_wgrad_nhwc_krsc_grouped_strided.cpp
sharkfuser/samples/matmul/: matmul_basic.cpp  matmul_batched.cpp
sharkfuser/samples/pointwise/: pointwise_add_transposed.cpp  pointwise_binary.cpp  pointwise_binary_ops.cpp  pointwise_ops.cpp  pointwise_unary_ops.cpp
sharkfuser/samples/runtime/: runtime_api.c
sharkfuser/templates/: external_tools.h.in  fusilliConfig.cmake.in
sharkfuser/tests/: CMakeLists.txt  lit.cfg.py  test_api.c  test_attributes.cpp  test_buffer.cpp  test_cache_empty.sh  test_context.cpp  test_conv_attributes.cpp  test_conv_node.cpp  test_example_lit.cpp  test_extras.cpp  test_graph.cpp  test_handle.cpp  test_logging.cpp  test_matmul_node.cpp  test_pointwise_attributes.cpp  test_pointwise_node.cpp  test_ssa_validation.cpp  test_tensor.cpp  test_tensor_attributes.cpp  test_utils.cpp  utils.h
sharkfuser/tests/benchmarks/: test_benchmark_runner.sh  test_commands.txt
sharkfuser/tests/hip_tests/: CMakeLists.txt  hip_utils.h  test_buffer.cpp  test_handle.cpp
sharkfuser/tests/hip_tests/samples/: CMakeLists.txt  conv_fprop_nchw_kcrs.cpp
sharkfuser/tests/lit/: test_asm_emitter.cpp  test_conv_asm_emitter.cpp  test_conv_asm_emitter_nchw_kcrs.cpp  test_conv_asm_emitter_nchw_kcrs_with_pad.cpp  test_conv_asm_emitter_nchw_krsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc_grouped.cpp  test_conv_asm_emitter_nhwc_kcrs.cpp  test_conv_asm_emitter_nhwc_krsc.cpp  test_conv_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_asm_emitter_nhwc_krsc_with_pad.cpp  test_conv_asm_emitter_nhwc_krsc_with_relu.cpp  test_conv_dgrad.cpp  test_conv_dgrad_asm_emitter_nhwc_kcrs.cpp  test_conv_dgrad_asm_emitter_nhwc_kcrs_grouped.cpp  test_conv_grouped_asm_emitter_nchw_kcrs.cpp  test_conv_grouped_asm_emitter_nchw_krsc.cpp  test_conv_grouped_asm_emitter_nhwc_kcrs.cpp  test_conv_grouped_asm_emitter_nhwc_krsc.cpp  test_conv_grouped_asm_emitter_nhwc_krsc_with_relu.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc_grouped_strided.cpp  test_matmul_asm_emitter_basic.cpp  test_matmul_asm_emitter_batched.cpp  test_matmul_asm_emitter_broadcast.cpp  test_matmul_asm_emitter_noncontiguous.cpp  test_pointwise_asm_emitter_add.cpp  test_pointwise_asm_emitter_div.cpp  test_pointwise_asm_emitter_mul.cpp  test_pointwise_asm_emitter_relu.cpp  test_pointwise_asm_emitter_sub.cpp
shortfin/: CMakeLists.txt  README.md  dev_me.py  pyproject.toml  requirements-iree-compiler.txt  requirements-tests-nogil.txt  requirements-tests.txt  setup.py
shortfin/build_tools/: python_lsan_suppressions.txt
shortfin/cpp/: CMakeLists.txt
shortfin/cpp/mobilenet/: CMakeLists.txt  driver.cc  mobilenet.cc  mobilenet.h
shortfin/docker/: Dockerfile.mooncake  Dockerfile.shortfin-rocm-mooncake  Dockerfile.shortfin_mooncake
shortfin/examples/python/llm/: cpp_beam_processor_example.py
shortfin/python/: array_binding.cc  array_host_ops.cc  lib_ext.cc  lib_ext.h
shortfin/python/_shortfin/: asyncio_bridge.py
shortfin/python/shortfin/: __init__.py
shortfin/python/shortfin_apps/: fiber_pool.py  utils.py
shortfin/src/: CMakeLists.txt
shortfin/src/shortfin/: CMakeLists.txt
shortfin/tests/api/: array_ops_test.py  array_test.py
shortfin/tests/examples/: async_test.py  fastapi_test.py
shortfin/tests/interop/: fastapi_test.py
shortfin/tests/invocation/: mobilenet_program_test.py  mobilenet_tracing_test.py
(+1362 files in other folders)
