[build-system]
requires = [
    "cmake>=3.29",
    "setuptools>=77.0.3",
    "wheel",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "shortfin"
authors = [
  {name = "SHARK Authors"},
]
description = "SHARK inference library and serving engine"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
requires-python = ">= 3.11"

# Version is set via the `setup.py`.
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/nod-ai/shark-ai"
Documentation = "https://shortfin.readthedocs.io/en/latest/"

[project.optional-dependencies]
apps = [
  "transformers",
  "dataclasses-json",
  "pillow",
  "fastapi",
  "uvicorn",
  "aiohttp>=3.11.3",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
